@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pebuild breakage introduced in 11/07 is corrected; back to working.
+
 * 'info' messages during merging are now displayed by default- new debug
   message type was added that isn't displayed by default.
 
@@ -20,6 +22,8 @@ See ChangeLog for full commit logs; this is summarized/major changes.
   system is FEATURES=strip, it tucks away a nonstripped binpkg- so that
   consumers of the binary repo are able to have debug symbols if they want
   them.
+
+* FEATURES=buildsyspkg is now supported.
 
 * FEATURES=buildpkg is now supported.
 
